--- a/app/src/main/res/layout/activity_todo_table_list.xml
+++ b/app/src/main/res/layout/activity_todo_table_list.xml
@@ -9,8 +9,13 @@
     tools:context=".TodoTableList">
 
     <TextView
-        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
